--- a/template/iCMS/agreement.htm
+++ b/template/iCMS/agreement.htm
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title><!--{$site.title}-->网络服务协议</title>
-    <meta name="keywords" content="<!--{$site.keywords}-->" />
-    <meta name="description" content="<!--{$site.description}-->"/>
-    <meta name="mobile-agent" content="format=html5;url=<!--{$site.url}-->"/>
-    <!--{iCMS:public:ui}-->
-    <link rel="stylesheet" href="<!--{$site.urls.public}-->/theme/default.css" type="text/css" />
-  </head>
-  <body>
-    <!--{include file="{iTPL}/header.htm"}-->
-    <div id="body" class="clearfix">
-      <div class="iCMS_agreement_wrap">
-        <div class="agr_h"><h1><!--{$site.title}-->网络服务协议</h1></div>
-<pre>1. 接受条款
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title><!--{$site.title}-->网络服务协议</title>
+<meta name="keywords" content="<!--{$site.keywords}-->" />
+<meta name="description" content="<!--{$site.description}-->"/>
+<meta name="mobile-agent" content="format=html5;url=<!--{$site.url}-->"/>
+<!--{iCMS:public:ui}-->
+<link rel="stylesheet" href="<!--{$site.urls.public}-->/theme/default.css" type="text/css" />
+</head>
+<body>
+<!--{include file="{iTPL}/header.htm"}-->
+<div id="body" class="clearfix">
+  <div class="iCMS_agreement_wrap">
+    <div class="agr_h">
+      <h1><!--{$site.title}-->网络服务协议</h1>
+    </div>
+    <pre>1. 接受条款
 <!--{$site.title}-->网及其旗下网站（以下简称“<!--{$site.title}-->”）根据以下服务条款为您提供服务。这些条款可由<!--{$site.title}-->随时更新，且毋须另行通知。<!--{$site.title}-->使用协议（以下简称“使用协议”）一旦发生变动，<!--{$site.title}-->将在网页上公布修改内容。修改后的使用协议一旦在网页上公布即有效代替原来的使用协议。此外，当您使用<!--{$site.title}-->特殊服务时，您和<!--{$site.title}-->应遵守<!--{$site.title}-->随时公布的与该服务相关的指引和规则。前述所有的指引和规则，均构成本使用协议的一部分。
 您在使用<!--{$site.title}-->提供的各项服务之前，应仔细阅读本使用协议。如您不同意本使用协议及/或随时对其的修改，请您立即停止使用<!--{$site.title}-->网所提供的全部服务；您一旦使用<!--{$site.title}-->服务，即视为您已了解并完全同意本使用协议各项内容，包括<!--{$site.title}-->对使用协议随时所做的任何修改，并成为<!--{$site.title}-->用户（以下简称“用户”）。
 
@@ -148,9 +150,9 @@ e）其它<!--{$site.title}-->认为有必要的情况。
 6). 只要您登录了<!--{$site.title}-->，就代表您认可以上所有协议。
 7). <!--{$site.title}-->对本使用协议享有最终解释权。
 </pre>
-      <div class="clearfix mb20"></div>
-      </div>
-    </div>
-    <!--{include file="{iTPL}/footer.htm"}-->
-  </body>
+    <div class="clearfix mb20"></div>
+  </div>
+</div>
+<!--{include file="{iTPL}/footer.htm"}-->
+</body>
 </html>
