--- a/template/iCMS/mobile/user/home.htm
+++ b/template/iCMS/mobile/user/home.htm
@@ -62,7 +62,7 @@
         <!--{$iCMS.page.next}-->
     </div>
     <script>
-    iCMS.scrollLoad(".userApp_content",".userApp_day","#pages_next",<!--{$iCMS.page.total}-->);
+    iCMS.scrollLoad(".userApp_content",".userApp_day","#pages_next","<!--{$iCMS.page.total}-->");
     </script>
     <!--{include file="{iTPL}/footer.htm"}-->
     <script src="<!--{$user.hits_script}-->"></script>
