--- a/template/iCMS/user/profile/avatar.htm
+++ b/template/iCMS/user/profile/avatar.htm
@@ -1,10 +1,10 @@
 <script src="<!--{$iCMS.UI}-->/meitu/xiuxiu.js" type="text/javascript"></script>
-<div class="title"> <span>设置头像</span> </div>
-<div id="user_form">
-	<div id="avatar_editor">
-	</div>
-</div>
-<script type="text/javascript">
+
+  <div class="title"> <span>设置头像</span> </div>
+  <div id="user_form">
+    <div id="avatar_editor"> </div>
+  </div>
+  <script type="text/javascript">
 
 window.onload=function(){
   xiuxiu.setLaunchVars("avatarPreview", {visible:true, label:"裁剪预览",small:{width:30,height:30}, medium:{width:60,height:60},large:{width:150,height:150, label:"大尺寸"}});
@@ -29,5 +29,4 @@ window.onload=function(){
     }
   }
 }
-</script>
-
+</script> 
