--- a/template/iCMS/user/register.close.htm
+++ b/template/iCMS/user/register.close.htm
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Warning! 系统已经关闭注册功能!</title>
-    <!--{iCMS:public:ui}-->
-    <link rel="stylesheet" href="<!--{$site.urls.ui}-->/iCMS.loginreg-6.0.0.css" type="text/css" />
-  </head>
-  <body>
-    <div id="body" class="register_wrap">
-      <div class="logo"> <a href="<!--{$site.url}-->" class="icms fl" title="<!--{$site.title}-->"><!--{$site.title}--></a> </div>
-      <div class="content pl20 pr20 pt40">
-        <div class="clear"></div>
-        <div class="alert">
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-          <strong>Warning!</strong> 系统已经关闭注册功能!
-        </div>
-        <div class="clear"></div>
-      </div>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Warning! 系统已经关闭注册功能!</title>
+  <!--{iCMS:public:ui}-->
+  <link rel="stylesheet" href="<!--{$site.urls.ui}-->/iCMS.loginreg-6.0.0.css" type="text/css" />
+</head>
+<body>
+  <div id="body" class="register_wrap">
+    <div class="logo"> <a href="<!--{$site.url}-->" class="icms fl" title="<!--{$site.title}-->"><!--{$site.title}--></a> </div>
+    <div class="content pl20 pr20 pt40">
+      <div class="clear"></div>
+      <div class="alert">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Warning!</strong> 系统已经关闭注册功能! </div>
+      <div class="clear"></div>
     </div>
-    <!--{include file="{iTPL}/footer.htm"}-->
-  </body>
+  </div>
+  <!--{include file="{iTPL}/footer.htm"}-->
+</body>
 </html>
