--- a/template/default/article.htm
+++ b/template/default/article.htm
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title><!--{$article.title}-->_<!--{$category.name}-->_<!--{$site.title}-->_<!--{$site.seotitle}--></title>
-    <meta name="keywords" content="<!--{$article.keywords}-->" />
-    <meta name="description" content="<!--{$article.description}-->"/>
-    <meta name="mobile-agent" content="format=html5;url=<!--{$article.url}-->"/>
-    <!--{iCMS:public:ui}-->
-    <link rel="stylesheet" href="<!--{$site.urls.public}-->/theme/default.css" type="text/css" />
-  </head>
-  <body>
-    <!--{include file="./header.htm"}-->
-    <div class="l-header-ad"><!--文章顶部横幅通栏 960x60--></div>
-    <div id="body" class="clearfix">
-      <div class="main-col">
-        <div id="guide"><strong>当前位置：</strong><a href="<!--{$site.url}-->">网站首页</a>&nbsp;&raquo;&nbsp;<!--{$category.nav}-->&nbsp;&raquo;&nbsp;<!--{$article.link}-->&nbsp;&raquo;&nbsp;正文</div>
-        <div id="page">
-          <h1><!--{$article.title}--></h1>
-          <div class="article-info">
-            <div class="article-author-time">
-              <!--{$article.user.at}-->
-              <span class="time"><!--{$article.pubdate|date:"Y-m-d H:s"}--></span>
-            </div>
-            <div class="share-area">
-              <!-- Baidu Button BEGIN -->
-              <div id="bdshare" class="bdshare_t bds_tools get-codes-bdshare" style="float:right"> <span class="bds_more" style="background:#fff!important;padding:0;">分享到：</span> <a class="bds_qzone"></a> <a class="bds_tsina"></a> <a class="bds_tqq"></a> <a class="bds_renren"></a> <a class="bds_t163"></a> <a class="shareCount" style="display:none"></a> </div>
-              <script type="text/javascript" id="bdshare_js" data="type=tools&amp;uid=0" ></script>
-              <script type="text/javascript" id="bdshell_js"></script>
-              <script type="text/javascript">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title><!--{$article.title}-->_<!--{$category.name}-->_<!--{$site.title}-->_<!--{$site.seotitle}--></title>
+  <meta name="keywords" content="<!--{$article.keywords}-->" />
+  <meta name="description" content="<!--{$article.description}-->"/>
+  <meta name="mobile-agent" content="format=html5;url=<!--{$article.url}-->"/>
+  <!--{iCMS:public:ui}-->
+  <link rel="stylesheet" href="<!--{$site.urls.public}-->/theme/default.css" type="text/css" />
+</head>
+<body>
+  <!--{include file="./header.htm"}-->
+  <div class="l-header-ad"><!--文章顶部横幅通栏 960x60--></div>
+  <div id="body" class="clearfix">
+    <div class="main-col">
+      <div id="guide"><strong>当前位置：</strong> <a href="<!--{$site.url}-->">网站首页</a> &nbsp;&raquo;&nbsp;<!--{$category.nav}-->&nbsp;&raquo;&nbsp;<!--{$article.link}-->&nbsp;&raquo;&nbsp;正文</div>
+      <div id="page">
+        <h1><!--{$article.title}--></h1>
+        <div class="article-info">
+          <div class="article-author-time"> 
+            <!--{$article.user.at}--> 
+            <span class="time"><!--{$article.pubdate|date:"Y-m-d H:s"}--></span> </div>
+          <div class="share-area"> 
+            <!-- Baidu Button BEGIN -->
+            <div id="bdshare" class="bdshare_t bds_tools get-codes-bdshare" style="float:right"> <span class="bds_more" style="background:#fff!important;padding:0;">分享到：</span> <a class="bds_qzone"></a> <a class="bds_tsina"></a> <a class="bds_tqq"></a> <a class="bds_renren"></a> <a class="bds_t163"></a> <a class="shareCount" style="display:none"></a> </div>
+            <script type="text/javascript" id="bdshare_js" data="type=tools&amp;uid=0" ></script> 
+            <script type="text/javascript" id="bdshell_js"></script> 
+            <script type="text/javascript">
               var bds_config = {
               'bdText':'一篇好文,推荐之-【'+$('#page h1').text()+'】（来自:<!--{$site.title}-->）',
               <!--{if $article.pic.url}-->
@@ -35,28 +34,27 @@
               <!--{/if}-->
               }
               document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + Math.ceil(new Date()/3600000)
-              </script>
-              <!-- Baidu Button END -->
-            </div>
-            <div class="article-tags">
-              <!--{$article.tags_link}-->
-            </div>
+              </script> 
+            <!-- Baidu Button END --> 
           </div>
-          <blockquote><!--{$article.description}--></blockquote>
-          <div class="article-detail">
-            <!--{if $article.pic.url}-->
-            <p class="image"><img class="lazy" src="<!--{$article.pic.url}-->"/></p>
-            <!--{/if}-->
-            <div class="l-main-inner-ad"><!--正文内嵌图片广告 250x250--></div>
-            <div class="article-body">
-              <!--{$article.body}-->
-              <!--{if $article.page.end}-->
-
-
-              <!--{/if}-->
-            </div>
+          <div class="article-tags"> 
+            <!--{$article.tags_link}--> 
           </div>
-          <script type="text/javascript">
+        </div>
+        <blockquote><!--{$article.description}--></blockquote>
+        <div class="article-detail"> 
+          <!--{if $article.pic.url}-->
+          <p class="image"><img class="lazy" src="<!--{$article.pic.url}-->"/></p>
+          <!--{/if}-->
+          <div class="l-main-inner-ad"><!--正文内嵌图片广告 250x250--></div>
+          <div class="article-body"> 
+            <!--{$article.body}--> 
+            <!--{if $article.page.end}--> 
+            
+            <!--{/if}--> 
+          </div>
+        </div>
+        <script type="text/javascript">
           $(function(){
             $("img",".article-body").each(function(i){
               iCMS.imgFix(this,500,600);
@@ -69,55 +67,58 @@
             });
           })
           </script>
-          <div class="article-pagenav iCMS_pagination clearfix">
-            <!--{$article.page.nav}-->
-          </div>
-          <div class="tip clr">提示：键盘也能翻页，试试"← →"键</div>
+        <div class="article-pagenav iCMS_pagination clearfix"> 
+          <!--{$article.page.nav}--> 
         </div>
-        <!--{include file="./article.up_down.htm"}-->
-        <div class="prev-next">
-          <p>上一篇 : <!--{$article.prev}--></p>
-          <p>下一篇 : <!--{$article.next}--></p>
-        </div>
-        <div class="clearfix mb20"></div>
-        <div class="comments_list clearfix">
-          <h3 class="label label-info"><i class="fa fa-comments"></i> 精彩评论</h3>
-          <!--{iCMS:comment:list display="iframe" page="true" row="5" appid="$article.appid" iid="$article.id"}-->
-        </div>
-        <div class="comment_form clearfix">
-          <!--{iCMS:comment:form display="iframe" ref="true"}-->
-        </div>
+        <div class="tip clr">提示：键盘也能翻页，试试"← →"键</div>
       </div>
-      <div class="right-col">
-        <div class="mod" id="artical">
-          <div class="hd">
-            <h3>热门文章排行榜<span>HOT</span></h3>
-          </div>
-          <div class="bd">
+      <!--{include file="./article.up_down.htm"}-->
+      <div class="prev-next">
+        <p>上一篇 : <!--{$article.prev}--></p>
+        <p>下一篇 : <!--{$article.next}--></p>
+      </div>
+      <div class="clearfix mb20"></div>
+      <div class="comments_list clearfix">
+        <h3 class="label label-info"><i class="fa fa-comments"></i> 精彩评论</h3>
+        <!--{iCMS:comment:list display="iframe" page="true" row="5" appid="$article.appid" iid="$article.id"}--> 
+      </div>
+      <div class="comment_form clearfix"> 
+        <!--{iCMS:comment:form display="iframe" ref="true"}--> 
+      </div>
+    </div>
+    <div class="right-col">
+      <div class="mod" id="artical">
+        <div class="hd">
+          <h3>热门文章排行榜<span>HOT</span></h3>
+        </div>
+        <div class="bd">
           <ul class="artical-top artical-top-num">
-          <!--{iCMS:article:list loop="true" row="10" orderby="hot" cid="$category.cid"}-->
+            <!--{iCMS:article:list loop="true" row="10" orderby="hot" cid="$category.cid"}--> 
             <!--{if $article_list.rownum<4}-->
-            <li class="top-1"><span><!--{$article_list.rownum}--></span><p><a href="<!--{$article_list.url}-->" target="_blank"><!--{$article_list.title}--></a></p><p><!--{$article_list.description}--></p></li>
+            <li class="top-1"><span><!--{$article_list.rownum}--></span>
+              <p> <a href="<!--{$article_list.url}-->" target="_blank"><!--{$article_list.title}--></a> </p>
+              <p><!--{$article_list.description}--></p>
+            </li>
             <!--{else}-->
-            <li><span><!--{$article_list.rownum}--></span><a href="<!--{$article_list.url}-->" target="_blank"><!--{$article_list.title}--></a></li>
-            <!--{/if}-->
-          <!--{/iCMS}-->
+            <li><span><!--{$article_list.rownum}--></span> <a href="<!--{$article_list.url}-->" target="_blank"><!--{$article_list.title}--></a> </li>
+            <!--{/if}--> 
+            <!--{/iCMS}-->
           </ul>
         </div>
       </div>
-        <div class="mod" id="tags">
-          <div class="hd">
-            <h3>相关标签<span>RELATED</span></h3>
-          </div>
-          <div class="bd">
-            <!--{iCMS:tag:list loop="true" row="10" cid="$category.cid"}-->
-            <a href="<!--{$tag_list.url}-->" target="_blank"><!--{$tag_list.name}--></a>
-            <!--{/iCMS}-->
-          </div>
+      <div class="mod" id="tags">
+        <div class="hd">
+          <h3>相关标签<span>RELATED</span></h3>
         </div>
+        <div class="bd"> 
+          <!--{iCMS:tag:list loop="true" row="10" cid="$category.cid"}--> 
+          <a href="<!--{$tag_list.url}-->" target="_blank"><!--{$tag_list.name}--></a> 
+          <!--{/iCMS}--> 
+        </div>
+      </div>
     </div>
   </div>
-  <!--{include file="./footer.htm"}-->
-<script src="<!--{$article.hits.script}-->"></script>
+  <!--{include file="./footer.htm"}--> 
+  <script src="<!--{$article.hits.script}-->"></script>
 </body>
 </html>
