--- a/template/iCMS/public.common.htm
+++ b/template/iCMS/public.common.htm
@@ -1,94 +1,122 @@
+
 <div id="iPHP-DIALOG" class="hide"><img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......</div>
 <div id="iCMS-MODAL" class="modal">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 class="modal-title">iCMS 提示</h3>
-  </div>
-  <div class="modal-body">
-    <p class="modal-loading"><img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......</p>
-  </div>
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <h3 class="modal-title">iCMS 提示</h3>
+    </div>
+    <div class="modal-body">
+      <p class="modal-loading"><img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......</p>
+    </div>
 </div>
 <div id="iCMS-login-dialog">
-  <div class="iCMS_login_wrap">
-    <div class="login_box">
-      <p class="login_fail"></p>
-      <div class="login_form">
-        <dl>
-          <dd>用户名：</dd>
-          <dt>
-          <input type="text" name="uname" data-container=".login_fail" class="iCMS_login_uname" placeholder="邮箱 或 昵称">
-          </dt>
-          <dd>密 码：</dd>
-          <dt>
-          <input type="password" name="pass" data-container=".login_fail" class="iCMS_login_pass">
-          </dt>
-          <!--{if $iCMS.config.user.loginseccode}-->
-          <dd>验证码：</dd>
-          <dt>
-          <input type="text" maxlength="4" name="seccode" data-container=".login_fail" class="iCMS_login_seccode iCMS_seccode">
-          <img src="<!--{iCMS:router url='/api/seccode'}-->" alt="验证码" class="iCMS_seccode_img r3"/>
-          <a href="javascript:;" class="iCMS_seccode_text" style="float: none">换一张</a>
-          </dt>
-          <!--{/if}-->
-          <dd class="clearfix mb5"></dd>
-          <dt class="mb5">
-          <input type="checkbox" name="remember" class="iCMS_login_remember checkbox" value="1">
-          两周内免登录
-          </dt>
-          <dd class="clearfix mb5"></dd>
-          <dt>
-          <button class="iCMS_login_btn btn btn-primary">登 陆</button>
-          <a href="<!--{iCMS:router url='/api/user/findpwd'}-->">忘记密码？</a></dt>
-        </dl>
-      </div>
-      <div class="reg_or_weibo">
-        <div class="register_box">还没有<!--{$site.title}-->账号？
-        <a href="<!--{iCMS:router url='/api/user/login/qq'}-->" style="display:block; margin:10px 0 20px"><img src="<!--{$site.urls.ui}-->/img/login_for_qq_v3.png"></a></div>
-        <div class="l_o">
-          <a style="background-position: 0 -137px;" href="<!--{iCMS:router url='/api/user/login/wx'}-->">用微信帐号登录</a>
-          <a href="<!--{iCMS:router url='/api/user/login/wb'}-->">用微博帐号登录</a><br>
+    <div class="iCMS_login_wrap">
+      <div class="login_box">
+        <p class="login_fail"></p>
+        <div class="login_form">
+          <dl>
+            <dd>用户名：</dd>
+            <dt>
+              <input type="text" name="uname" data-container=".login_fail" class="iCMS_login_uname" placeholder="邮箱 或 昵称">
+            </dt>
+            <dd>密 码：</dd>
+            <dt>
+              <input type="password" name="pass" data-container=".login_fail" class="iCMS_login_pass">
+            </dt>
+            <!--{if $iCMS.config.user.loginseccode}-->
+            <dd>验证码：</dd>
+            <dt>
+              <input type="text" maxlength="4" name="seccode" data-container=".login_fail" class="iCMS_login_seccode iCMS_seccode">
+              <img src="<!--{iCMS:router url='/api/seccode'}-->" alt="验证码" class="iCMS_seccode_img r3"/> <a href="javascript:;" class="iCMS_seccode_text" style="float: none">换一张</a> </dt>
+            <!--{/if}-->
+            <dd class="clearfix mb5"></dd>
+            <dt class="mb5">
+              <input type="checkbox" name="remember" class="iCMS_login_remember checkbox" value="1">
+              两周内免登录 </dt>
+            <dd class="clearfix mb5"></dd>
+            <dt>
+              <button class="iCMS_login_btn btn btn-primary">登 陆</button>
+              <a href="<!--{iCMS:router url='/api/user/findpwd'}-->">忘记密码？</a></dt>
+          </dl>
         </div>
-        <a href="<!--{iCMS:router url='/api/user/register'}-->" style="font-size:14px; text-decoration:underline;">直接注册<!--{$site.title}-->帐号</a>
+        <div class="reg_or_weibo">
+          <div class="register_box">还没有<!--{$site.title}-->账号？ <a href="<!--{iCMS:router url='/api/user/login/qq'}-->" style="display:block; margin:10px 0 20px"><img src="<!--{$site.urls.ui}-->/img/login_for_qq_v3.png"></a></div>
+          <div class="l_o"> <a style="background-position: 0 -137px;" href="<!--{iCMS:router url='/api/user/login/wx'}-->">用微信帐号登录</a> <a href="<!--{iCMS:router url='/api/user/login/wb'}-->">用微博帐号登录</a><br>
+          </div>
+          <a href="<!--{iCMS:router url='/api/user/register'}-->" style="font-size:14px; text-decoration:underline;">直接注册<!--{$site.title}-->帐号</a> </div>
       </div>
     </div>
-  </div>
 </div>
 <div id="iCMS-report-box">
-  <div class="iCMS_report_dialog">
-    <div class="header">请选择理由</div>
-    <ul class="options clearfix">
-      <li><label><input value="1" name="reason" type="radio">不友善内容</label></li>
-      <li><label><input value="2" name="reason" type="radio">广告等垃圾信息</label></li>
-      <li><label><input value="3" name="reason" type="radio">违法违规内容</label></li>
-      <li><label><input value="4" name="reason" type="radio">不宜公开讨论的政治内容</label></li>
-      <li><label><input value="0" name="reason" type="radio">其他（可自行填写）</label>
-      <p class="input-container visible-if-checked">
-        <input placeholder="请填写原因" type="text" name="content" class="reason-text zg-form-text-input">
-      </p>
-    </li>
-  </ul>
-  <div class="buttons clearfix">
-    <a class="cancel">取消</a>
-    <button type="button" name="ok" class="btn btn-primary">确定</button>
-  </div>
-</div>
+    <div class="iCMS_report_dialog">
+      <div class="header">请选择理由</div>
+      <ul class="options clearfix">
+        <li>
+          <label>
+            <input value="1" name="reason" type="radio">
+            不友善内容</label>
+        </li>
+        <li>
+          <label>
+            <input value="2" name="reason" type="radio">
+            广告等垃圾信息</label>
+        </li>
+        <li>
+          <label>
+            <input value="3" name="reason" type="radio">
+            违法违规内容</label>
+        </li>
+        <li>
+          <label>
+            <input value="4" name="reason" type="radio">
+            不宜公开讨论的政治内容</label>
+        </li>
+        <li>
+          <label>
+            <input value="0" name="reason" type="radio">
+            其他（可自行填写）</label>
+          <p class="input-container visible-if-checked">
+            <input placeholder="请填写原因" type="text" name="content" class="reason-text zg-form-text-input">
+          </p>
+        </li>
+      </ul>
+      <div class="buttons clearfix"> <a class="cancel">取消</a>
+        <button type="button" name="ok" class="btn btn-primary">确定</button>
+      </div>
+    </div>
 </div>
 <div id="iCMS-pm-box">
-  <div class="iCMS_pm_dialog">
-    <dl>
-      <dt><label>发给：</label></dt>
-      <dd>
-        <a class="pm_inbox" href="javascript:;">私信记录 »</a>
-        <p class="pm_uname"></p>
-      </dd>
-      <div class="clearfix mt10"></div>
-      <dt><label>内容：</label></dt>
-      <dd><textarea class="pm_content" name="content"></textarea></dd>
-      <div class="pm_warnmsg clearfix">请填写私信内容。</div>
-    </dl>
-    <div class="buttons clearfix mt15">
-      <a class="cancel">取消</a>
-      <button type="button" name="send" class="btn btn-primary">发送</button>
+    <div class="iCMS_pm_dialog">
+      <dl>
+        <dt>
+          <label>发给：</label>
+        </dt>
+        <dd> <a class="pm_inbox" href="javascript:;">私信记录 »</a>
+          <p class="pm_uname"></p>
+        </dd>
+        <div class="clearfix mt10"></div>
+        <dt>
+          <label>内容：</label>
+        </dt>
+        <dd>
+          <textarea class="pm_content" name="content"></textarea>
+        </dd>
+        <div class="pm_warnmsg clearfix">请填写私信内容。</div>
+      </dl>
+      <div class="buttons clearfix mt15"> <a class="cancel">取消</a>
+        <button type="button" name="send" class="btn btn-primary">发送</button>
+      </div>
     </div>
-  </div>
+</div>
+<div id="iCMS-favorite-box">
+    <div class="iCMS_favorite_dialog">
+      <h3 class="popover-title">添加收藏夹</h3>
+      <dl>
+        <dt></dt>
+        <dd></dd>
+      </dl>
+      <div class="buttons clearfix mt15"> <a class="cancel">取消</a>
+        <button type="button" name="favorite" class="btn btn-primary">收藏</button>
+      </div>
+    </div>
 </div>
