--- a/template/iCMS/user/home.htm
+++ b/template/iCMS/user/home.htm
@@ -1,150 +1,119 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title><!--{$user.nickname}-->的<!--{$site.title}-->_<!--{$site.seotitle}--></title>
-    <meta name="keywords" content="<!--{$site.keywords}-->" />
-    <meta name="description" content="<!--{$user.nickname}-->的<!--{$site.title}-->"/>
-    <meta name="mobile-agent" content="format=html5;url=<!--{$user.urls.home}-->"/>
-    <!--{iCMS:public:ui}-->
-    <link href="<!--{$site.urls.ui}-->/iCMS.user-6.0.0.css" type="text/css" rel="stylesheet" />
-    <link href="<!--{$site.urls.ui}-->/iCMS.comment-6.0.0.css" type="text/css" rel="stylesheet"/>
-    <script src="<!--{$site.urls.ui}-->/iCMS.comment-6.0.0.js"></script>
-
-    <link href="<!--{$site.urls.public}-->/theme/default.css" type="text/css" rel="stylesheet" />
-  </head>
-  <body>
-    <!--{include file="{iTPL}/header.htm"}-->
-    <div class="userApp_home clearfix">
-      <div class="userApp_header">
-        <div class="card_banner">
-          <img src="<!--{$userdata.coverpic}-->" alt="<!--{$user.nickname}-->的封面" onerror="iCMS.user.nocover();">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title><!--{$user.nickname}-->的<!--{$site.title}-->_<!--{$site.seotitle}--></title>
+  <meta name="keywords" content="<!--{$site.keywords}-->" />
+  <meta name="description" content="<!--{$user.nickname}-->的<!--{$site.title}-->"/>
+  <meta name="mobile-agent" content="format=html5;url=<!--{$user.urls.home}-->"/>
+  <!--{iCMS:public:ui}-->
+  <link href="<!--{$site.urls.ui}-->/iCMS.user-6.0.0.css" type="text/css" rel="stylesheet" />
+  <link href="<!--{$site.urls.ui}-->/iCMS.comment-6.0.0.css" type="text/css" rel="stylesheet"/>
+  <script src="<!--{$site.urls.ui}-->/iCMS.comment-6.0.0.js"></script>
+  <link href="<!--{$site.urls.public}-->/theme/default.css" type="text/css" rel="stylesheet" />
+</head>
+<body>
+  <!--{include file="{iTPL}/header.htm"}-->
+  <div class="userApp_home clearfix">
+    <div class="userApp_header">
+      <div class="card_banner"> <img src="<!--{$userdata.coverpic}-->" alt="<!--{$user.nickname}-->的封面" onerror="iCMS.user.nocover();"> </div>
+      <div class="card_top">
+        <div class="card_info"> <a class="card_title_name" data-tip="iCMS:ucard:<!--{$user.uid}-->" href="<!--{$user.urls.home}-->">
+            <!--{$user.nickname}-->
+          </a> <i class="icon_<!--{$user.gender}-->"></i> <a data-param='{"uid":"<!--{$user.uid}-->","name":"<!--{$user.nickname}-->","follow":"<!--{$status.followed}-->"}' class="iCMS_user_follow follow_btn <!--{if $status.followed}-->unfollow<!--{else}-->follow<!--{/if}-->"></a>
+          <p class="card_slogan">
+            <!--{$userdata.slogan|default:'这家伙太懒了,什么都没有留下!'}-->
+          </p>
         </div>
-        <div class="card_top">
-          <div class="card_info">
-            <a class="card_title_name" data-tip="iCMS:ucard:<!--{$user.uid}-->" href="<!--{$user.urls.home}-->">
-              <!--{$user.nickname}-->
-            </a>
-            <i class="icon_<!--{$user.gender}-->"></i>
-            <a data-param='{"uid":"<!--{$user.uid}-->","name":"<!--{$user.nickname}-->","follow":"<!--{$status.followed}-->"}' class="iCMS_user_follow follow_btn <!--{if $status.followed}-->unfollow<!--{else}-->follow<!--{/if}-->"></a>
-            <p class="card_slogan">
-              <!--{$userdata.slogan|default:'这家伙太懒了,什么都没有留下!'}-->
-            </p>
-          </div>
-          <div class="card_data">
-            <ul>
-              <li class='last'>
-                <a href="<!--{$user.urls.fans}-->">
-                <span class="text_count"><!--{$user.fans|num10K}--></span>
-                <span class="text_atr">粉丝</span>
-                </a>
-              </li>
-              <li>
-                <a href="<!--{$user.urls.follow}-->">
-                <span class="text_count"><!--{$user.follow|num10K}--></span>
-                <span class="text_atr">关注</span>
-                </a>
-              </li>
-              <li class='first'>
-                <a href="<!--{$user.urls.home}-->">
-                <span class="text_count"><!--{$user.article|num10K}--></span>
-                <span class="text_atr">文章</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="card_avatar">
-            <a href="<!--{$user.urls.home}-->">
-              <img class="iCMS_user_avatar card_avatar_img" src="<!--{$user.avatar}-->" onerror="iCMS.user.noavatar();">
-            </a>
-          </div>
+        <div class="card_data">
+          <ul>
+            <li class='last'> <a href="<!--{$user.urls.fans}-->"> <span class="text_count"><!--{$user.fans|num10K}--></span> <span class="text_atr">粉丝</span> </a> </li>
+            <li> <a href="<!--{$user.urls.follow}-->"> <span class="text_count"><!--{$user.follow|num10K}--></span> <span class="text_atr">关注</span> </a> </li>
+            <li class='first'> <a href="<!--{$user.urls.home}-->"> <span class="text_count"><!--{$user.article|num10K}--></span> <span class="text_atr">文章</span> </a> </li>
+          </ul>
         </div>
+        <div class="card_avatar"> <a href="<!--{$user.urls.home}-->"> <img class="iCMS_user_avatar card_avatar_img" src="<!--{$user.avatar}-->" onerror="iCMS.user.noavatar();"> </a> </div>
       </div>
-      <div class="user_nav_wrap">
-        <ul class="nav_list">
-          <li<!--{if $iCMS.APP.do=="home"}--> class="c"<!--{/if}-->><a href="<!--{$user.urls.home}-->" title="文章"><i class="fa fa-file-text-o"></i> 文章</a></li>
-          <li<!--{if $iCMS.APP.do=="favorite"}--> class="c"<!--{/if}-->> <a href="<!--{$user.urls.favorite}-->" title="收藏"><i class="fa fa-star"></i> 收藏</a></li>
-          <li> <a href="<!--{$user.urls.share}-->" title="分享" class="nav_icon icon_sha">分享</a></li>
+    </div>
+    <div class="user_nav_wrap">
+      <ul class="nav_list">
+        <li<!--{if $iCMS.APP.do=="home"}--> class="c"<!--{/if}-->><a href="<!--{$user.urls.home}-->" title="文章"><i class="fa fa-file-text-o"></i> 文章</a>
+        </li>
+        <li<!--{if $iCMS.APP.do=="favorite"}--> class="c"<!--{/if}-->> <a href="<!--{$user.urls.favorite}-->" title="收藏"><i class="fa fa-bookmark"></i> 收藏</a>
+        </li>
+        <li> <a href="<!--{$user.urls.share}-->" title="分享" class="nav_icon icon_sha">分享</a></li>
+      </ul>
+    </div>
+    <div class="main-col">
+      <!--{if $user.category.name}-->
+      <h3 class="category_name"><span class="label label-info"><!--{$user.category.name}--></span></h3>
+      <!--{/if}-->
+      <!--{if $iCMS.APP.do=="home"}-->
+      <!--{include file="./home.article.htm" import="true"}-->
+      <!--{/if}-->
+      <!--{if $iCMS.APP.do=="favorite"}-->
+      <!--{include file="./home.favorite.htm" import="true"}-->
+      <!--{/if}-->
+      <div id="artpagenav" class="iCMS_pagination">
+        <!--{$iCMS.page.nav}-->
+      </div>
+    </div>
+    <div class="right-col">
+      <!--{if $status.isme}-->
+      <div class="mod" id="home_btn"> <a href="<!--{iCMS:router url='/user/publish'}-->" class="btn"><i class="icon_edit"></i> <span>发表文章</span></a> <a href="<!--{iCMS:router url='/user/manage'}-->" class="btn"><i class="icon_setting"></i> <span>主页管理</span></a> </div>
+      <!--{/if}-->
+      <div class="mod txtList" id="user_category">
+        <div class="hd">
+          <h3>分类<span>CATEGORY</span></h3>
+          <!--{if $status.isme}-->
+          <a href="<!--{iCMS:router url='/user/manage/category'}-->" target="_blank" class="more">管理&gt;&gt;</a>
+          <!--{/if}-->
+        </div>
+        <ul>
+          <!--{iCMS:user:category loop="true" userid="$user.uid" appid="$iCMS.CONST[iCMS_APP_ARTICLE]"}-->
+          <li><a href="<!--{$user_category.url}-->"><!--{$user_category.name}--> <span>(<!--{$user_category.count}-->)</span></a></li>
+          <!--{/iCMS}-->
         </ul>
       </div>
-      <div class="main-col">
-        <!--{if $user.category.name}-->
-        <h3 class="category_name"><span class="label label-info"><!--{$user.category.name}--></span></h3>
-        <!--{/if}-->
-        <!--{if $iCMS.APP.do=="home"}-->
-          <!--{include file="./home.article.htm" import="true"}-->
-        <!--{/if}-->
-        <!--{if $iCMS.APP.do=="favorite"}-->
-          <!--{include file="./home.favorite.htm" import="true"}-->
-        <!--{/if}-->
-        <div id="artpagenav" class="iCMS_pagination">
-          <!--{$iCMS.page.nav}-->
-        </div>
+      <div class="mod">
+        <div class="hd">
+          <h3>粉丝<span>FANS</span></h3>
+          <a href="<!--{iCMS:router url='/user/manage/fans'}-->" target="_blank" class="more">管理&gt;&gt;</a> </div>
+        <ul class="avatar_list">
+          <!--{iCMS:user:follow loop="true" row="30" fuid=$user.uid}-->
+          <li><a href="<!--{$user_follow.url}-->" title="<!--{$user_follow.name}-->"> <img class="iCMS_user_avatar avatar_30" data-tip="iCMS:ucard:<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->" onerror="iCMS.user.noavatar();"> </a></li>
+          <!--{iCMSelse}-->
+          <li><span class="label label-inverse">居然没人关注，太low了吧</span></li>
+          <!--{/iCMS}-->
+        </ul>
       </div>
-      <div class="right-col">
-        <!--{if $status.isme}-->
-        <div class="mod" id="home_btn">
-          <a href="<!--{iCMS:router url='/user/publish'}-->" class="btn"><i class="icon_edit"></i> <span>发表文章</span></a>
-          <a href="<!--{iCMS:router url='/user/manage'}-->" class="btn"><i class="icon_setting"></i> <span>主页管理</span></a>
-        </div>
-        <!--{/if}-->
-        <div class="mod txtList" id="user_category">
-          <div class="hd">
-            <h3>分类<span>CATEGORY</span></h3>
-            <!--{if $status.isme}-->
-            <a href="<!--{iCMS:router url='/user/manage/category'}-->" target="_blank" class="more">管理&gt;&gt;</a>
-            <!--{/if}-->
-          </div>
-          <ul>
-            <!--{iCMS:user:category loop="true" userid=$user.uid}-->
-            <li><a href="<!--{$user_category.url}-->"><!--{$user_category.name}--> <span>(<!--{$user_category.count}-->)</span></a></li>
-            <!--{/iCMS}-->
-          </ul>
-        </div>
-        <div class="mod">
-          <div class="hd">
-            <h3>粉丝<span>FANS</span></h3>
-            <a href="<!--{iCMS:router url='/user/manage/fans'}-->" target="_blank" class="more">管理&gt;&gt;</a>
-          </div>
-          <ul class="avatar_list">
-            <!--{iCMS:user:follow loop="true" row="30" fuid=$user.uid}-->
-            <li><a href="<!--{$user_follow.url}-->" title="<!--{$user_follow.name}-->">
-              <img class="iCMS_user_avatar avatar_30" data-tip="iCMS:ucard:<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->" onerror="iCMS.user.noavatar();">
-            </a></li>
-            <!--{iCMSelse}-->
-            <li><span class="label label-inverse">居然没人关注，太low了吧</span></li>
-            <!--{/iCMS}-->
-          </ul>
-        </div>
-        <div class="mod">
-          <div class="hd">
-            <h3>关注<span>FOLLOW</span></h3>
-            <a href="<!--{iCMS:router url='/user/manage/follow'}-->" target="_blank" class="more">管理&gt;&gt;</a>
-          </div>
-          <ul class="avatar_list">
-            <!--{iCMS:user:follow loop="true" row="30" userid=$user.uid}-->
-            <li><a href="<!--{$user_follow.url}-->" title="<!--{$user_follow.name}-->">
-              <img class="iCMS_user_avatar avatar_30" data-tip="iCMS:ucard:<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->" onerror="iCMS.user.noavatar();"></a></li>
-            <!--{iCMSelse}-->
-            <li><span class="label label-inverse">没有关注</span></li>
-            <!--{/iCMS}-->
-          </ul>
-        </div>
-        <div class="mod">
-          <div class="hd">
-            <h3>统计<span>STATISTICS</span></h3>
-            </div>
-            <ul>
-              <li><span class="label label-success">今日访问：<!--{$userdata.hits_today}--></span></li>
-              <li><span class="label label-success">昨日访问：<!--{$userdata.hits_yday}--></span></li>
-              <li><span class="label label-info">本周访问：<!--{$userdata.hits_week}--></span></li>
-              <li><span class="label label-info">本月访问：<!--{$userdata.hits_month}--></span></li>
-              <li><span class="label label-inverse">所有访问：<!--{$userdata.hits}--></span></li>
-            </ul>
-          </div>
-        </div>
+      <div class="mod">
+        <div class="hd">
+          <h3>关注<span>FOLLOW</span></h3>
+          <a href="<!--{iCMS:router url='/user/manage/follow'}-->" target="_blank" class="more">管理&gt;&gt;</a> </div>
+        <ul class="avatar_list">
+          <!--{iCMS:user:follow loop="true" row="30" userid=$user.uid}-->
+          <li><a href="<!--{$user_follow.url}-->" title="<!--{$user_follow.name}-->"> <img class="iCMS_user_avatar avatar_30" data-tip="iCMS:ucard:<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->" onerror="iCMS.user.noavatar();"></a></li>
+          <!--{iCMSelse}-->
+          <li><span class="label label-inverse">没有关注</span></li>
+          <!--{/iCMS}-->
+        </ul>
       </div>
-      <!--{include file="{iTPL}/footer.htm"}-->
-    <script src="<!--{$user.hits_script}-->"></script>
-    </body>
-  </html>
+      <div class="mod">
+        <div class="hd">
+          <h3>统计<span>STATISTICS</span></h3>
+        </div>
+        <ul>
+          <li><span class="label label-success">今日访问：<!--{$userdata.hits_today}--></span></li>
+          <li><span class="label label-success">昨日访问：<!--{$userdata.hits_yday}--></span></li>
+          <li><span class="label label-info">本周访问：<!--{$userdata.hits_week}--></span></li>
+          <li><span class="label label-info">本月访问：<!--{$userdata.hits_month}--></span></li>
+          <li><span class="label label-inverse">所有访问：<!--{$userdata.hits}--></span></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!--{include file="{iTPL}/footer.htm"}-->
+  <script src="<!--{$user.hits_script}-->"></script>
+</body>
+</html>
