--- a/template/iCMS/user/profile/custom.htm
+++ b/template/iCMS/user/profile/custom.htm
@@ -1,21 +1,20 @@
 <div class="title"> <span>设置主页封面</span> </div>
-<div id="coverpic_box">
-	<img id="coverpic" src="<!--{$userdata.coverpic}-->" alt="个人封面">
-</div>
-<span class="label label-important">封面图片建议尺寸：960像素 * 300像素</span>
-<div class="clearfix mt10"></div>
-<form id="coverpic_upload" action="<!--{iCMS:router url='/user'}-->" method="post" enctype="multipart/form-data" target="iCMS_FRAME">
-	<input name="action" type="hidden" value="profile" />
-	<input name="pg" type="hidden" value="custom" />
-	<input type="file" name="upfile" class="hide">
-	<a id="upload" href="javascript:;" class="btn btn-primary"><i class="fa fa-upload"></i> 更换封面</a>
-    <a class="btn" href="javascript:meituxx();"><i class="fa fa-edit"></i> 使用美图秀秀编辑封面</a>
-</form>
-<div class="coverpic_editor hide mt10">
-	<script src="<!--{$iCMS.UI}-->/meitu/xiuxiu.js" type="text/javascript"></script>
-	<div id="coverpic_editor"></div>
-</div>
-<script>
+  <div id="coverpic_box">
+    <img id="coverpic" src="<!--{$userdata.coverpic}-->" alt="个人封面">
+  </div>
+  <span class="label label-important">封面图片建议尺寸：960像素 * 300像素</span>
+  <div class="clearfix mt10"></div>
+  <form id="coverpic_upload" action="<!--{iCMS:router url='/user'}-->" method="post" enctype="multipart/form-data" target="iCMS_FRAME">
+    <input name="action" type="hidden" value="profile" />
+    <input name="pg" type="hidden" value="custom" />
+    <input type="file" name="upfile" class="hide">
+    <a id="upload" href="javascript:;" class="btn btn-primary"><i class="fa fa-upload"></i> 更换封面</a> <a class="btn" href="javascript:meituxx();"><i class="fa fa-edit"></i> 使用美图秀秀编辑封面</a>
+  </form>
+  <div class="coverpic_editor hide mt10"> 
+    <script src="<!--{$iCMS.UI}-->/meitu/xiuxiu.js" type="text/javascript"></script>
+    <div id="coverpic_editor"></div>
+  </div>
+  <script>
 $(function() {
     $("#upload").click(function() {
         $("input[name=upfile]").click();
@@ -69,4 +68,5 @@ function meituxx(){
     }
   }
 }
-</script>
+</script> 
+  
