--- a/template/iCMS/user/profile/setpassword.htm
+++ b/template/iCMS/user/profile/setpassword.htm
@@ -1,41 +1,42 @@
 <div id="user_form" class="profile_password">
-	<form id="resetpassword" action="<!--{iCMS:router url='/user'}-->" method="post" target="iCMS_FRAME">
-	<input name="action" type="hidden" value="profile" />
-	<input name="pg" type="hidden" value="setpassword" />
-	<div class="title"> <span>修改密码</span> </div>
-	<dl>
-		<dd>现在的密码：</dd>
-		<dt class="clearfix">
-		<input name="oldPwd" class="gray_text r5" type="password" value="">
-		</dt>
-		<dd>新的密码：</dd>
-		<dt class="clearfix">
-		<input id="password" name="newPwd1" class="gray_text r5" type="password" data-errormsg="密码长度应为6~16个字符">
-		<span class="tip" style="">密码长度应为6~16个字符</span>
-		<div class="level" style="display:none">
-			<div class="l01 li"><span class="ls current">弱</span></div>
-			<div class="l02 li"><span class="ls">中</span></div>
-			<div class="l03 li"><span class="ls">强</span></div>
-		</div>
-		</dt>
-		<dd>确认新的密码：</dd>
-		<dt class="clearfix">
-		<input name="newPwd2" class="gray_text r5" type="password" value="">
-		</dt>
-		<dd>验证码：</dd>
-		<dt class="clearfix">
-		<input type="text" maxlength="4" class="gray_text checekcode r3" name="validCode">
-		<img class="r3" id="iCMS-seccode-img" src="<!--{iCMS:router url='/api/seccode'}-->" alt="验证码"> <a href="javascript:;" id="iCMS-seccode-text">换一张</a> </dt>
-		<dd>&nbsp;</dd>
-		<dt class="clearfix subbox">
-		<input class="btn" type="submit" value="确认修改">
-		<input class="btn btn-mini" type="reset" value="取消">
-		</dt>
-	</dl>
-</form>
-<!-- 修改部分结束 -->
-</div>
-<script type="text/javascript">
+    <form id="resetpassword" action="<!--{iCMS:router url='/user'}-->" method="post" target="iCMS_FRAME">
+      <input name="action" type="hidden" value="profile" />
+      <input name="pg" type="hidden" value="setpassword" />
+      <div class="title"> <span>修改密码</span> </div>
+      <dl>
+        <dd>现在的密码：</dd>
+        <dt class="clearfix">
+          <input name="oldPwd" class="gray_text r5" type="password" value="">
+        </dt>
+        <dd>新的密码：</dd>
+        <dt class="clearfix">
+          <input id="password" name="newPwd1" class="gray_text r5" type="password" data-errormsg="密码长度应为6~16个字符">
+          <span class="tip" style="">密码长度应为6~16个字符</span>
+          <div class="level" style="display:none">
+            <div class="l01 li"><span class="ls current">弱</span></div>
+            <div class="l02 li"><span class="ls">中</span></div>
+            <div class="l03 li"><span class="ls">强</span></div>
+          </div>
+        </dt>
+        <dd>确认新的密码：</dd>
+        <dt class="clearfix">
+          <input name="newPwd2" class="gray_text r5" type="password" value="">
+        </dt>
+        <dd>验证码：</dd>
+        <dt class="clearfix">
+          <input type="text" maxlength="4" class="gray_text checekcode r3" name="validCode">
+          <img class="r3" id="iCMS-seccode-img" src="<!--{iCMS:router url='/api/seccode'}-->" alt="验证码">
+          <a href="javascript:;" id="iCMS-seccode-text">换一张</a> </dt>
+        <dd>&nbsp;</dd>
+        <dt class="clearfix subbox">
+          <input class="btn" type="submit" value="确认修改">
+          <input class="btn btn-mini" type="reset" value="取消">
+        </dt>
+      </dl>
+    </form>
+    <!-- 修改部分结束 --> 
+  </div>
+  <script type="text/javascript">
 var warning = {label:'warning',icon:'warning'};
 $(function(){
 	$("#resetpassword").submit(function(){
@@ -76,4 +77,5 @@ $(function(){
 		$("#resetpassword").submit();
 	})
 })
-</script>
+</script> 
+  
